--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROWLER</title>
     <link rel="stylesheet" href="style/css/main.css">
-    <link rel="shortcut icon" href="/style/img/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./style/img/logo.svg" type="image/x-icon">
 </head>
 <body>
-    <img src="/style/img/background-1slide.png" alt="" class="background">
+    <img src="./style/img/background-1slide.png" alt="" class="background">
     <div class="container">
     <div class="first-slide">
         <div class="header">
 
             <div class="head-float-left">
                 <div class="logo">
-                    <img src="/style/img/logo.svg" alt="" class="logo-img">
+                    <img src="./style/img/logo.svg" alt="" class="logo-img">
                     <p class="logo-name">PROWLER</p>
                 </div>
                 <div class="head-button">
@@ -28,7 +28,7 @@
                         </li>
                         <li>
                             <a href="#"><p>Contact</p></a>
-                            <img src="/style/img/green-cube.svg" alt="" class="green-cube">
+                            <img src="./style/img/green-cube.svg" alt="" class="green-cube">
                         </li>
                     </ul>
                 </div>
@@ -67,8 +67,8 @@
                 <div class="theme" onselectstart="return false;">
                     <input type="checkbox" id="darkmode-toggle" class="inp-darkmode">
                     <label for="darkmode-toggle" class="darkmode-toggle">
-                        <img src="/style/img/sun.svg" alt="" class="sun">
-                        <img src="/style/img/moon.svg" alt="" class="moon">
+                        <img src="./style/img/sun.svg" alt="" class="sun">
+                        <img src="./style/img/moon.svg" alt="" class="moon">
                     </label>
                 </div>
 
@@ -307,7 +307,7 @@
                         <h3>Prowler <span>©</span></h3>
                     </div>
                     <div class="widget-video">
-                        <img src="/style/img/video.png" alt="">
+                        <img src="./style/img/video.png" alt="">
                     </div>
                     <div class="widget-black-menu">
                         <svg class="widget-black-buttons" xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
@@ -360,6 +360,6 @@
 
     </div>
     </div>
-    <script src="/style/JavaScript/main.js"></script>
+    <script src="./style/JavaScript/main.js"></script>
 </body>
 </html>
